[UPD] created input name and km without style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
   </head>
   <body>
+    <label for="">Nome Cognome</label>
+    <input type="text" name="full_name" id="full_name" placeholder="nome e cognome">
+    
+    <label for="">Km da percorrere</label>
+    <input type="text" name="km" id="km" placeholder="kilometri">
+
+
+
     <script src="./js/script.js"></script>
   </body>
 </html>
