--- a/index.html
+++ b/index.html
@@ -3,17 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
   </head>
   <body>
-    <label for="">Nome Cognome</label>
-    <input type="text" name="full_name" id="full_name" placeholder="nome e cognome">
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <label for="" class="control-label">Nome Cognome</label>
+                <input class="form-control" type="text" name="full_name" id="full_name" placeholder="nome e cognome">
+            </div>
+            <div class="col-4">
+                <label for="" class="control-label">Km da percorrere</label>
+                <input class="form-control" type="text" name="km" id="km" placeholder="kilometri">
+            </div>
+            <div class="col-4">
+                <label for="" class="control-label">Fascia d'età</label>
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Open this select menu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <button type="button" class="btn">Genera</button>
+            </div>
+            <div class="col-6">
+                <button type="button" class="btn">Annulla</button>
+            </div>
+        </div>
+    </div>
     
-    <label for="">Km da percorrere</label>
-    <input type="text" name="km" id="km" placeholder="kilometri">
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
