--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <label for="select-age" class="form-label">Fascia d'età</label>
                 <select class="form-select" aria-label="Default select example" id="select-age">
                     <option selected>Open this select menu</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    <option value="minorenne">Minorenne</option>
+                    <option value="adulto">Adulto</option>
+                    <option value="senior">Senior( > 65 )</option>
                   </select>
             </div>
         </div>
