[UPD] created structur ticket in html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,34 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <h4>NOME PASSEGGERO</h4>
+                <div class="name"></div>
+            </div>
+            <div class="col-9">
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Offerta</th>
+                        <th scope="col">Carrozza</th>
+                        <th scope="col">Codice CP</th>
+                        <th scope="col">Costo biglietto</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="ticket_type"></td>
+                        <td>5</td>
+                        <td>48265</td>
+                        <td class="ticket_price"></td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
+    </div>
     
 
 
