[UPD] added all function for ticket

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-3">
                 <h4>NOME PASSEGGERO</h4>
-                <div class="name"></div>
+                <div id="name"></div>
             </div>
             <div class="col-9">
                 <table class="table">
@@ -54,10 +54,10 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td class="ticket_type"></td>
+                        <td id="ticket_type"></td>
                         <td>5</td>
                         <td>48265</td>
-                        <td class="ticket_price"></td>
+                        <td id="ticket_price"></td>
                       </tr>
                     </tbody>
                   </table>
