--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
   </head>
   <body>
     <div class="container">
         <div class="row">
-            <div class="col-4">
-                <label for="full_name" class="form-label">Nome Cognome</label>
-                <input class="form-control" type="text" name="full_name" id="full_name" placeholder="nome e cognome">
+            <h1 class="text-white text-center my-3">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+        </div>
+        <div class="row bg-white rounded-top-2 p-3">
+            <div class="col-4 text-center">
+                <label for="full_name" class="form-label violet">Nome Cognome</label>
+                <input class="form-control border-violet" type="text" name="full_name" id="full_name" placeholder="nome e cognome">
             </div>
-            <div class="col-4">
-                <label for="km" class="form-label">Km da percorrere</label>
-                <input class="form-control" type="text" name="km" id="km" placeholder="kilometri">
+            <div class="col-4 text-center">
+                <label for="km" class="form-label violet">Km da percorrere</label>
+                <input class="form-control border-violet" type="text" name="km" id="km" placeholder="kilometri">
             </div>
-            <div class="col-4">
-                <label for="select-age" class="form-label">Fascia d'età</label>
-                <select class="form-select" aria-label="Default select example" id="select-age">
+            <div class="col-4 text-center">
+                <label for="select-age" class="form-label violet">Fascia d'età</label>
+                <select class="form-select border-violet" aria-label="Default select example" id="select-age">
                     <option selected>Open this select menu</option>
                     <option value="minorenne">Minorenne</option>
                     <option value="adulto">Adulto</option>
@@ -27,20 +31,23 @@
                   </select>
             </div>
         </div>
-        <div class="row">
-            <div class="col-6">
-                <button type="button" class="btn" id="calculate-price">Genera</button>
+        <div class="row bg-white rounded-bottom-2 p-3">
+            <div class="col-12 text-center">
+                <button type="button" class="btn violet" id="calculate-price">Genera</button>
+                <button type="button" class="btn violet">Annulla</button>
             </div>
-            <div class="col-6">
-                <button type="button" class="btn">Annulla</button>
-            </div>
-        </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-3">
+            <h1 class="text-white text-center my-3">IL TUO BIGLIETTO</h1>
+        </div>
+        <div class="row bg-white p-3">
+            <div class="col-12">
+                <h4>DETTAGLIO PASSEGGERI</h4>
+            </div>
+            <div class="col-3 bg-secondary p-2">
                 <h4>NOME PASSEGGERO</h4>
-                <div id="name"></div>
+                <div id="name" ></div>
             </div>
             <div class="col-9">
                 <table class="table">
