--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button type="button" class="btn violet">Annulla</button>
             </div>
     </div>
-    <div class="container">
+    <div class="container d-none" id="d-none">
         <div class="row">
             <h1 class="text-white text-center my-3">IL TUO BIGLIETTO</h1>
         </div>
